[project]
name = "unparallel"
version = "0.4.0"
description = "Create async web requests in no time"
authors = [
  { name = "RafaelWO", email = "weingartner.rafael@hotmail.com" }
]
readme = "README.md"
requires-python = ">=3.8,<4.0"
license = "MIT"

dependencies  = [
  "httpx (>=0.21.0,<1)",
  "tqdm (>=4.61.2)"
]

# Keywords description https://python-poetry.org/docs/pyproject/#keywords
keywords = ["async", "http", "requests", "network"]

# Pypi classifiers: https://pypi.org/classifiers/
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "Operating System :: OS Independent",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
]

[project.urls]
homepage = "https://rafaelwo.github.io/unparallel/"
repository = "https://github.com/RafaelWO/unparallel"
documentation = "https://rafaelwo.github.io/unparallel/"
changelog = "https://github.com/RafaelWO/unparallel/blob/main/CHANGELOG.md"

[tool.poetry.group.dev.dependencies]
bandit = "^1.7.1"
mypy = "^1.7"
mypy-extensions = "^1.0.0"
pre-commit = "^3.5.0"
pydocstyle = "^6.1.1"
pytest = ">=7.4.3,<9.0.0"
safety = ">=2.3.5,<4.0.0"
coverage = "^7.3.2"
coverage-badge = "^1.1.0"
pytest-cov = ">=4.1,<6.0"
pytest-asyncio = "^0.23.2"
respx = ">=0.20.2,<0.22.0"
bump2version = "^1.0.1"
pytest-markdown-docs = "^0.5.0"
pytest-examples = ">=0.0.10,<0.1"
ruff = ">=0.5.1,<0.6.0"
types-tqdm = "^4.66.0.20240106"
bump-my-version = ">=0.21,<0.25"

[tool.poetry.group.docs.dependencies]
mkdocs-material = "^9.5.1"
mkdocstrings-python = "^1.7.5"
mike = "^2.0.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"


##########################################

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]

[tool.mypy]
# https://mypy.readthedocs.io/en/latest/config_file.html#using-a-pyproject-toml-file
python_version = "3.8"
strict = true


[tool.pytest.ini_options]
# https://docs.pytest.org/en/6.2.x/customize.html#pyproject-toml
# Directories that are not visited by pytest collector:
norecursedirs =["hooks", "*.egg", ".eggs", "dist", "build", "docs", ".tox", ".git", "__pycache__"]
doctest_optionflags = ["NUMBER", "NORMALIZE_WHITESPACE", "IGNORE_EXCEPTION_DETAIL"]

# Extra options:
addopts = [
  "--strict-markers",
  "--tb=short",
  "--doctest-modules",
  "--doctest-continue-on-failure",
]

[tool.coverage.run]
source = ["tests"]
branch = true

[tool.coverage.paths]
source = ["unparallel"]

[tool.coverage.report]
fail_under = 90
show_missing = true
