[project]
name = "unparallel"
version = "0.5.0"
description = "Create async web requests in no time"
authors = [
  { name = "RafaelWO", email = "weingartner.rafael@hotmail.com" }
]
readme = "README.md"
requires-python = ">=3.9.2,<4.0"
license = "MIT"

dependencies  = [
  "httpx (>=0.21.0,<1)",
  "tqdm (>=4.61.2)"
]

# Keywords description https://python-poetry.org/docs/pyproject/#keywords
keywords = ["async", "http", "requests", "network"]

# Pypi classifiers: https://pypi.org/classifiers/
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "Operating System :: OS Independent",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
]

[project.urls]
homepage = "https://rafaelwo.github.io/unparallel/"
repository = "https://github.com/RafaelWO/unparallel"
documentation = "https://rafaelwo.github.io/unparallel/"
changelog = "https://github.com/RafaelWO/unparallel/blob/main/CHANGELOG.md"

[tool.poetry.group.dev.dependencies]
bandit = "^1.8.6"
mypy = "^1.18.2"
mypy-extensions = "^1.1.0"
pre-commit = "^4.3.0"
pydocstyle = "^6.3.0"
pytest = "^8.4.2"
safety = "^3.6.2"
coverage = "^7.10.7"
coverage-badge = "^1.1.2"
pytest-cov = "^7.0.0"
pytest-asyncio = "^1.2.0"
respx = "^0.22.0"
bump2version = "^1.0.1"
pytest-markdown-docs = "^0.9.0"
pytest-examples = "^0.0.18"
ruff = "^0.13.3"
types-tqdm = "^4.67.0.20250809"
bump-my-version = "^1.2.4"

[tool.poetry.group.docs.dependencies]
mkdocs-material = "^9.5.1"
mkdocstrings-python = "^1.7.5"
mike = "^2.0.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"


##########################################

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]

[tool.mypy]
# https://mypy.readthedocs.io/en/latest/config_file.html#using-a-pyproject-toml-file
python_version = "3.9"
strict = true


[tool.pytest.ini_options]
# https://docs.pytest.org/en/6.2.x/customize.html#pyproject-toml
# Directories that are not visited by pytest collector:
norecursedirs =["hooks", "*.egg", ".eggs", "dist", "build", "docs", ".tox", ".git", "__pycache__"]
doctest_optionflags = ["NUMBER", "NORMALIZE_WHITESPACE", "IGNORE_EXCEPTION_DETAIL"]

# Extra options:
addopts = [
  "--strict-markers",
  "--tb=short",
  "--doctest-modules",
  "--doctest-continue-on-failure",
]

[tool.coverage.run]
source = ["tests"]
branch = true

[tool.coverage.paths]
source = ["unparallel"]

[tool.coverage.report]
fail_under = 90
show_missing = true
